# school21

./: .gitignore  CONST.h  Makefile  README.md  binary_utils.c  correct_contributions.sh  correct_contributions_by_name.sh  ft_atoi.c  ft_calloc.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstlast.c  ft_lstnew.c  ft_lstsize.c  ft_split.c  ft_strnstr.c  ft_strnstr1.c  get_next_line.c  get_next_line_utils.c  libft.h  main.c  remove_docker_from_goinfre.sh  scan_mac_mem.sh
Cub3D/: CMakeLists.txt  Makefile  README.md  _binary.c  _config.h  _errors_sample.c  _reg_exp.c  a.out  bigmap.cub  cub.h  cub3D  cub3d  ft_cub.h  ft_cub.h.gch  ft_error.c  main.c  map.cub  map_deb.cub  mlx_sample.c  my_printf  todos.txt  utils_mlx.c  utils_vector.c
Cub3D/LinuxSample/: Cub3D  Makefile
Cub3D/LinuxSample/Cub3d_code/srcs/: display.c  where_is_waldo.c
Cub3D/errors/: ft_error.c  ft_errors.h
Cub3D/game/: dda.c  game.c  moving.c  screenshot.c  sprite.c
Cub3D/gnl/: get_next_line.c
Cub3D/libft/: ft_atoi.c  ft_free.c  ft_itoa.c  ft_itoa_hex.c  ft_itoa_u.c  ft_itoa_uhex.c  ft_lstclear.c  ft_lstmap.c  ft_memset.c  ft_strmultiply.c  libft.h
Cub3D/libmlx/: mlx_ext_randr.c
Cub3D/libmlx_mac/: mlx.h
Cub3D/parser/: binary_utils.c  ft_count_sprites.c  ft_parse_file.c  ft_parse_head.c  ft_parse_map.c  ft_parse_sprites.c  ft_parser.c  ft_parser.h  ft_parser_utils.c  ft_validator.c  parse_file.c
Cub3D/regexp/: ft_regexp.c  ft_regexp.h  reg_exp.c
Cub3D/textures/: 1.xpm  2.xpm  WALL16.xpm  WALL33.xpm  barrel.xpm  planks.xpm  sand.xpm  woolsnow.xpm
Cub3D/window/: _cub.h  _window_sample.c  map.c  moving.c  player.c  save_screen.c  vector_utils.c  window.c
Cub3D0/: ft_error.c  map.cub  map_deb.cub
Cub3D0/libft/: Makefile  ft_putstr_fd.c  ft_strlen.c  ft_strtrim.c  ft_substr.c
Cub3D0/libmlx_mac/: mlx_new_window.m
Cub3D0/textures/: 3.xpm  WALL65.xpm  tilledsoil.xpm
Docker/: cli.php  crib  install_docker.sh  remove_docker_from_goinfre.sh
Docker/LEMP_debian/: Dockerfile  default  nginx.config  rebuild_container.sh  run_server.sh  start.sh
Docker/apache/: docker-compose.yml
Docker/sample/: Dockerfile
Docker/server/: rebuild.sh
GNL/from_check/: get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c
GNL/get_next_line/: 0get_next_line_utils.c  64bit_paragraph.txt  =get_next_line.c  =get_next_line.h  =get_next_line_utils.c  =main.c  CMakeLists.txt  _get_next_line.c  _get_next_line.h  _get_next_line_utils.c  a.out  get_next_line.c  get_next_line.h  get_next_line.h.gch  (+8 more)
Headless/: Dockerfile  example.js
Kubernetes/: crib  insert_docker_kube_to_goinfre.sh  remove_docker_kube_from_goinfre.sh
Libft/: main.c
Printf/: Makefile  a.out  ft_printf.c  ft_printf.h  main.c  my_printf  printf.h  printf_length.c  printf_samples.c  strarg_sample.c
Printf/ft_printf/: CMakeLists.txt  ft_printf.c  ft_printf.h  main.c  my_printf  printf_length.c  printf_samples.c  strarg_sample.c
Printf/ft_printf/libft/: Makefile  ft_bzero.c  ft_free.c  ft_isprint.c  ft_itoa_u.c  ft_itoa_uhex.c  ft_lstclear.c  ft_putmem_fd.c  ft_putnbr_fd.c  ft_tolower.c
Printf/ft_printf/parser/: ft_init_obj.c  ft_parse.c
Printf/ft_printf/pft_2019/: history.csv  results.txt  test  test.libc  test.mine
Printf/ft_printf/pft_2019/test.dSYM/Contents/Resources/DWARF/: test
Printf/ft_printf/printf_check/ft_printf/: main.c
Printf/ft_printf/printf_check/unit_test/tests/: tests
Printf/ft_printf/processor/: ft_char.c  ft_int.c  ft_p.c  ft_processor.c  ft_s.c  ft_u.c  ft_x.c
ProgKids/: drones_battle.py  drones_follow_me.py  дз_выход из лабиринта.py
SQL_piscine/: Dockerfile  connect.js
Server/: README.md
cub/: CMakeLists.txt  CMakeLists1.txt  Makefile  README.md  _cub_utils.c  _errors_sample.c  a.out  cub3D  ft_cub.h  ft_cub.h.gch  main.c  map.cub  map_deb.cub  map_deb1.cub  mlx_sample.c  todos.txt  utils0.c
cub/errors/: ft_error.c
cub/game/: dda.c  game.c  player.c  screenshot.c  sprite.c
cub/libft/: CMakeLists.txt  ft_isdigit.c  ft_itoa_hex.c  ft_itoa_u.c  ft_itoa_uhex.c  ft_lstadd_back.c  ft_lstdelone.c  ft_lstlast.c  ft_memccpy.c  ft_memchr.c  ft_strdup.c  ft_strmultiply.c  ft_strncmp.c  ft_strrchr.c  ft_toupper.c
cub/libmlx/: mlx.h  mlx_mouse.c
cub/libmlx/test/: main.c
cub/libmlx_mac/: Makefile  mlx.h  mlx_get_screen_size.m  mlx_new_image.m
cub/parser/: ft_count_sprites.c  ft_parse_file.c  ft_parse_head.c  ft_parse_map.c  ft_parser.c  ft_validator.c
cub/textures/: 23f.xpm  WALL93.xpm  sprite.xpm
cub/window/: list_utils.c  map.c  moving.c  player.c  screenshot.c  window.c
cub3/: CMakeLists.txt  Makefile  checklist.txt  cub3D  ft_cub.h  main.c  map.cub  map_deb.cub
docker_vblood/: Dockerfile
gnl2/: CMakeLists.txt  a.out  get_next_line.c  get_next_line.h  get_next_line.txt  main.c
minishell/: CMakeLists.txt  a.out  install_google_test.sh  main.c  term_test.c
minishell/Google_tests/: CMakeLists.txt
puppeteer/: package-lock.json  scrape.js  test.js
pythonProject/: main.py
ray_cast/: CMakeLists.txt  README.md  cub3D  utils_vector.c
script_tools/: a  test_connection.php
selenium/: api_tink.py  apitink.py  client.py  headless.py  install_webdriver.sh  io_files.py  requirements.txt  run_ones.py  server.py  tbot.py  test.py
shell/: CMakeLists.txt  Makefile  main.c  minishell.h  test
(+254 files in other folders)
