cmake_minimum_required(VERSION 3.17)
project(ft_printf C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(libft)
include_directories(parser)
include_directories(processor)

add_executable(ft_printf
		libft/ft_atoi.c
		libft/ft_bzero.c
		libft/ft_calloc.c
		libft/ft_free.c
		libft/ft_isalnum.c
		libft/ft_isalpha.c
		libft/ft_isascii.c
		libft/ft_isdigit.c
		libft/ft_isprint.c
		libft/ft_itoa.c
		libft/ft_itoa_hex.c
		libft/ft_itoa_u.c
		libft/ft_itoa_uhex.c
		libft/ft_lstadd_back.c
		libft/ft_lstadd_front.c
		libft/ft_lstclear.c
		libft/ft_lstdelone.c
		libft/ft_lstiter.c
		libft/ft_lstlast.c
		libft/ft_lstmap.c
		libft/ft_lstnew.c
		libft/ft_lstsize.c
		libft/ft_memccpy.c
		libft/ft_memchr.c
		libft/ft_memcmp.c
		libft/ft_memcpy.c
		libft/ft_memmove.c
		libft/ft_memset.c
		libft/ft_putchar_fd.c
		libft/ft_putendl_fd.c
		libft/ft_putnbr_fd.c
		libft/ft_putstr_fd.c
		libft/ft_split.c
		libft/ft_strchr.c
		libft/ft_strdup.c
		libft/ft_strjoin.c
		libft/ft_strlcat.c
		libft/ft_strlcpy.c
		libft/ft_strlen.c
		libft/ft_strmapi.c
		libft/ft_strmultiply.c
		libft/ft_strncmp.c
		libft/ft_strnstr.c
		libft/ft_strrchr.c
		libft/ft_strtrim.c
		libft/ft_substr.c
		libft/ft_tolower.c
		libft/ft_toupper.c
		libft/libft.h
		parser/ft_init_obj.c
		parser/ft_parse.c
		processor/ft_char.c
		processor/ft_int.c
		processor/ft_p.c
		processor/ft_processor.c
		processor/ft_s.c
		processor/ft_u.c
		processor/ft_x.c
		ft_printf.c
		ft_printf.h
		main.c
		my_config.h)
